# bloom-filter

./: .gitignore  .gitlab-ci.yml  Doxyfile  README.md  flake.nix  meson.build  meson.options  spack.yaml
.cargo/: config.toml
.github/workflows/: docs.yml
benchmarks/: benchmark_common.cuh  cpu_filter_comparison.cu  fpr_fastx_sweep.cu  gpu_filter_comparison.cu  kmc_to_binary.cpp  meson.build  param_sweep.cu  profiler_benchmark.cu  sh_sweep.cu  superbloom_gpu_benchmark.cu  superbloom_vs_cuco_bloom.cu
examples/: main.cu  meson.build
include/bloom/: Alphabet.cuh  BloomFilter.cuh  Fastx.hpp  PackedKmerBinary.hpp  device_span.cuh  gzstreambuf.hpp  hashutil.cuh  helpers.cuh  superbloom_ffi.hpp
nix/shells/default/: default.nix
scripts/: benchmark_utils.py  compare_filters.py  compare_gpu_vs_cpu.py  download_genomes.sh  extract_kmers.sh  mogon_env.sh  ncu_profiler.py  plot_fpr.py  plot_fpr_fastx_sweep.py  plot_gpu_vs_cpu.py  plot_param_sweep.py  plot_sh_sweep.py  plot_sol_benchmark.py  plot_utils.py  run-param-sweep.py  run_sol_benchmark.py
subprojects/: cuckoogpu.wrap  cuco.wrap  kmc.wrap  superbloom-cpu.wrap
subprojects/packagefiles/cuco/: meson.build
subprojects/packagefiles/kmc/: fix-zlib-include.patch  meson.build
subprojects/packagefiles/superbloom-cpu/: ffi-wrapper.patch  meson.build
tests/: meson.build  test_bloom_filter.cu  test_fastx.cu  test_packed_input.cu  test_support.cuh  test_support.hpp
